force-app/main/default/objects/Help_Desk_Case_Origin__mdt.object
<CustomObject>
    <description>Used to hold Case Origin values to display on the Help Desk Visual Force page.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this picklist option is active and displayed on the page.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>The order in which the value is displayed on the dropdown.</description>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The api value for the picklist option.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Help Desk Case Origin</label>
    <pluralLabel>Help Desk Case Origins</pluralLabel>
</CustomObject>